--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "discord.js": "^11.5.1",
+    "discord.js-giveaway": "^1.0.2",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
     "lodash": "^4.17.15",
