--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "ms": "^2.1.1",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
-  }
+  }, 
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
